--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-ffmpeg-next = "6.0.0"
+ffmpeg-the-third = "1.2.2+ffmpeg-6.0"
 tokio = { version = "1.29.1", features = ["full"] }
